--- a/index.html
+++ b/index.html
@@ -1,25 +1,57 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Delivery Tracker</title>
+  <title>Delivery Driver Tracker</title>
   <link rel="stylesheet" href="styles.css">
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+  <script src="firebase-config.js"></script>
 </head>
 <body>
   <header>
-    <img src="assets/images/logo.png" alt="Delivery Tracker Logo" class="logo">
-    <h1>Delivery Tracker</h1>
+    <img src="assets/images/logo.png" alt="Logo" class="logo">
+    <h1>Delivery Driver Tracker</h1>
   </header>
 
   <main>
-    <div id="deliveries-container">
-      <!-- Delivery items will be injected here by app.js -->
+    <div class="auth-container">
+      <h2>Sign In</h2>
+      <form id="login-form">
+        <input type="email" id="email" placeholder="Email" required>
+        <input type="password" id="password" placeholder="Password" required>
+        <select id="role" required>
+          <option value="" disabled selected>Select Role</option>
+          <option value="driver">Driver</option>
+          <option value="overseer">Overseer</option>
+        </select>
+        <button type="submit">Sign In</button>
+      </form>
+      <p>Don't have an account? <a href="#" id="signup-link">Sign Up</a></p>
+    </div>
+
+    <div class="signup-container" style="display: none;">
+      <h2>Sign Up</h2>
+      <form id="signup-form">
+        <input type="email" id="signup-email" placeholder="Email" required>
+        <input type="password" id="signup-password" placeholder="Password" required>
+        <select id="signup-role" required>
+          <option value="" disabled selected>Select Role</option>
+          <option value="driver">Driver</option>
+          <option value="overseer">Overseer</option>
+        </select>
+        <button type="submit">Sign Up</button>
+      </form>
+      <p>Already have an account? <a href="#" id="login-link">Sign In</a></p>
     </div>
   </main>
 
   <footer>
-    <p>&copy; 2024 Delivery Tracker. All rights reserved.</p>
+    <p>&copy; 2024 Delivery Driver Tracker</p>
   </footer>
 
   <script src="app.js"></script>
