--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,6 +31,8 @@
         <button type="submit">Sign In</button>
       </form>
       <p>Don't have an account? <a href="#" id="signup-link">Sign Up</a></p>
+      <p>Forgot your password? <a href="#" id="forgot-password-link">Reset Password</a></p>
+      <div id="login-error" class="error-message"></div>
     </div>
 
     <div class="signup-container" style="display: none;">
@@ -39,6 +40,7 @@
       <form id="signup-form">
         <input type="email" id="signup-email" placeholder="Email" required>
         <input type="password" id="signup-password" placeholder="Password" required>
+        <input type="password" id="signup-confirm-password" placeholder="Confirm Password" required>
         <select id="signup-role" required>
           <option value="" disabled selected>Select Role</option>
           <option value="driver">Driver</option>
@@ -47,6 +49,8 @@
         <button type="submit">Sign Up</button>
       </form>
       <p>Already have an account? <a href="#" id="login-link">Sign In</a></p>
+      <div id="signup-error" class="error-message"></div>
+      <div id="signup-success" class="success-message"></div>
     </div>
   </main>
 
