--- a/driver.html
+++ b/driver.html
@@ -12,7 +12,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
   <script src="firebase-config.js"></script>
 </head>
-<body>
+<body id="driver-page">
   <header>
     <img src="assets/images/logo.png" alt="Logo" class="logo">
     <h1>Driver Dashboard</h1>
@@ -20,7 +20,7 @@
   </header>
 
   <main>
-    <div id="status">Initializing...</div>
+    <div id="status">Fetching your location...</div>
     <div id="map"></div>
   </main>
 
