--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +11,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
   <script src="firebase-config.js"></script>
 </head>
-<body>
+<body id="index-page">
   <header>
     <img src="assets/images/logo.png" alt="Logo" class="logo">
     <h1>Delivery Driver Tracker</h1>
@@ -24,11 +23,6 @@
       <form id="login-form">
         <input type="email" id="email" placeholder="Email" required>
         <input type="password" id="password" placeholder="Password" required>
-        <select id="role" required>
-          <option value="" disabled selected>Select Role</option>
-          <option value="driver">Driver</option>
-          <option value="overseer">Overseer</option>
-        </select>
         <button type="submit">Sign In</button>
       </form>
       <p>Don't have an account? <a href="#" id="signup-link">Sign Up</a></p>
@@ -42,11 +36,6 @@
         <input type="email" id="signup-email" placeholder="Email" required>
         <input type="password" id="signup-password" placeholder="Password" required>
         <input type="password" id="signup-confirm-password" placeholder="Confirm Password" required>
-        <select id="signup-role" required>
-          <option value="" disabled selected>Select Role</option>
-          <option value="driver">Driver</option>
-          <option value="overseer">Overseer</option>
-        </select>
         <button type="submit">Sign Up</button>
       </form>
       <p>Already have an account? <a href="#" id="login-link">Sign In</a></p>
