--- a/driver.html
+++ b/driver.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Driver Dashboard - Delivery Driver Tracker</title>
   <link rel="stylesheet" href="styles.css">
+  <!-- Leaflet CSS (Integrity removed) -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <!-- Firebase SDKs -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
@@ -28,14 +31,8 @@
     <p>&copy; 2024 Delivery Driver Tracker</p>
   </footer>
 
-  <!-- Load Leaflet CSS and JS for Maps -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-sA+gYg2Ad1un4v70fHJ4yt5XwQ4p8FyP6Gke6S+kF0A="
-    crossorigin=""/>
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-p5oMec4T4a5c8otm48k2WtT4QeP2ThftkQ1A9s1k0kA="
-    crossorigin=""></script>
-
+  <!-- Leaflet JS (Integrity removed) -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
