--- a/index.html
+++ b/index.html
@@ -60,18 +60,7 @@
           <label for="signup-confirm-password">Confirm Password:</label>
           <input type="password" id="signup-confirm-password" required>
         </div>
-        <!-- Optional: Allow role selection during sign-up -->
-        <div>
-          <p>Select Role(s):</p>
-          <label>
-            <input type="checkbox" name="signup-role" value="driver" checked>
-            Driver
-          </label>
-          <label>
-            <input type="checkbox" name="signup-role" value="overseer">
-            Overseer
-          </label>
-        </div>
+        <!-- Removed Role Selection -->
         <div id="signup-error" class="error-message"></div>
         <div id="signup-success" class="success-message"></div>
         <button type="submit">Sign Up</button>
