--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body id="index-page">
   <header>
-    <img src="assets/images/logo.png" alt="Logo" class="logo">
+    <img src="assets/images/logo.png" alt="Logo" id="logo">
     <h1>Delivery Driver Tracker</h1>
   </header>
 
