--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Delivery Driver Tracker - Login</title>
+  <title>Delivery Driver Tracker - Landing Page</title>
   <link rel="stylesheet" href="styles.css">
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <body id="index-page">
   <header>
-    <img src="assets/images/logo.png" alt="Logo" id="logo">
-    <h1>Delivery Driver Tracker</h1>
+    <img src="assets/logo.png" alt="Company Logo" id="logo">
+    <!-- Optional: Add navigation links or other header content -->
   </header>
 
   <main>
@@ -21,48 +20,21 @@
         <h2>Sign In</h2>
         <div>
           <label for="email">Email:</label>
-          <input type="email" id="email" required>
+          <input type="email" id="email" required placeholder="Enter your email">
         </div>
         <div>
           <label for="password">Password:</label>
-          <input type="password" id="password" required>
+          <input type="password" id="password" required placeholder="Enter your password">
         </div>
         <div>
-          <p>Select Role:</p>
-          <label>
-            <input type="radio" name="role" value="driver" checked>
-            Driver
-          </label>
-          <label>
-            <input type="radio" name="role" value="overseer">
-            Overseer
-          </label>
+          <label>Select Role:</label>
+          <label><input type="radio" name="role" value="driver" required> Driver</label>
+          <label><input type="radio" name="role" value="overseer"> Overseer</label>
         </div>
-        <div id="login-error" class="error-message"></div>
         <button type="submit">Sign In</button>
-        <p><a href="#" id="forgot-password-link">Forgot Password?</a></p>
-        <p>Don't have an account? <a href="#" id="signup-link">Sign Up</a></p>
-      </form>
-
-      <!-- Sign-Up Form -->
-      <form id="signup-form" class="signup-container" style="display: none;">
-        <h2>Sign Up</h2>
-        <div>
-          <label for="signup-email">Email:</label>
-          <input type="email" id="signup-email" required>
-        </div>
-        <div>
-          <label for="signup-password">Password:</label>
-          <input type="password" id="signup-password" required>
-        </div>
-        <div>
-          <label for="signup-confirm-password">Confirm Password:</label>
-          <input type="password" id="signup-confirm-password" required>
-        </div>
-        <div id="signup-error" class="error-message"></div>
-        <div id="signup-success" class="success-message"></div>
-        <button type="submit">Sign Up</button>
-        <p>Already have an account? <a href="#" id="login-link">Sign In</a></p>
+        <div id="login-error" class="error-message"></div>
+        <a href="#" id="forgot-password-link">Forgot Password?</a>
+        <p>Don't have an account? <a href="signup.html" id="signup-link">Sign Up</a></p>
       </form>
     </div>
   </main>
@@ -71,14 +43,14 @@
     <p>&copy; 2024 Delivery Driver Tracker</p>
   </footer>
 
-  <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+  
   <!-- Firebase Configuration -->
   <script src="firebase-config.js"></script>
+  
   <!-- Application JavaScript -->
   <script src="app.js"></script>
 </body>
