--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body id="index-page">
   <header>
-    <img src="assets/logo.png" alt="Company Logo" id="logo">
+    <img src="assets/images/logo.png" alt="Company Logo" id="logo">
     <!-- Optional: Add navigation links or other header content -->
   </header>
 
