--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
           <label for="password">Password:</label>
           <input type="password" id="password" required placeholder="Enter your password">
         </div>
+        <div>
+          <label>Select Role:</label>
+          <label><input type="radio" name="role" value="driver" required> Driver</label>
+          <label><input type="radio" name="role" value="overseer"> Overseer</label>
+        </div>
         <button type="submit">Sign In</button>
         <div id="login-error" class="error-message"></div>
         <a href="#" id="forgot-password-link">Forgot Password?</a>
