--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Delivery Driver Tracker - Landing Page</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body id="index-page">
   <header>
     <img src="assets/images/logo.png" alt="Company Logo" id="logo">
-    <!-- Optional: Add navigation links or other header content -->
   </header>
 
   <main>
     <div class="auth-container">
       <!-- Sign-In Form -->
-      <form id="login-form">
+      <!-- NOTE THE `action="javascript:void(0);"` -->
+      <form id="login-form" action="javascript:void(0);">
         <h2>Sign In</h2>
         <div>
           <label for="email">Email:</label>
