--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main>
     <div class="auth-container">
       <!-- Sign-In Form -->
-      <form id="login-form">
+      <form id="login-form" method="post">
         <h2>Sign In</h2>
         <div>
           <label for="email">Email:</label>
